fix draft-to-html/html-to-draft gap

--- a/js/src/Renderer/Table/styles.css
+++ b/js/src/Renderer/Table/styles.css
@@ -1,3 +1,9 @@
+.editor-html {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #f1f1f1;
+}
+
 .editor-table {
   border-collapse: collapse;
   border: 1px solid #111;
